In templates for tables, only conditionally show the table if there is scheduled content. Otherwise show a message, that there is nothing scheduled. Fixed styling in registration template to have fields on the same row in columns  (submit button was only half visible because of footer formatting)

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -25,6 +25,6 @@
   width: 100%;
   bottom: 0;
   left: 0;
-  height: 60px;
+  height: 58px;
   background: #8fa9fa;
 }
